--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* styles.css */
 body, html {
     margin: 0;
     padding: 0;
@@ -36,6 +37,8 @@ header h1 {
 h2 {
     font-size: 2em;
     margin-top: 1px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 p {
