--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,6 @@ h2 {
 
 p {
     font-size: 1.2em;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
